# Scratch_LLM

./: .gitignore  README.md  __init__.py  pyproject.toml
foundations/: microtokenizer.py
src/: log.py  utility.py
src/alignment/: microbatchnorm.py  microdropout.py
src/foundations/: microembedding.py  microoptimizer.py  microtokenizer.py
